--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <h1>Список пользователей</h1>
     <table class="table">
       <thead>
+        <button type="button" class="btn btn-success" id="butttonUserUp">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-up" viewBox="0 0 16 16">
+           <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.854 1.5 1.5a.5.5 0 0 1-.708.708L13 11.707V14.5a.5.5 0 0 1-1 0v-2.793l-.646.647a.5.5 0 0 1-.708-.708l1.5-1.5a.5.5 0 0 1 .708 0M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"></path>
+           <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"></path>
+           </svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+           Упорядочить по возрастанию
+        </font></font></button>
+
+        <button type="button" class="btn btn-primary" id="butttonUserDown">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-down" viewBox="0 0 16 16">
+            <path d="M12.5 9a3.5 3.5 0 1 1 0 7 3.5 3.5 0 0 1 0-7m.354 5.854 1.5-1.5a.5.5 0 0 0-.708-.708l-.646.647V10.5a.5.5 0 0 0-1 0v2.793l-.646-.647a.5.5 0 0 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0M11 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4"></path>
+            <path d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z"></path>
+          </svg><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">
+            Упорядочить по убыванию
+        </font></font></button>
         <tr>
           <th scope="col">#</th>
           <th scope="col"> Name: </th>
@@ -46,23 +61,7 @@
         </tr>
       </thead>
       <tbody id="userList">
-        <tr>
-          <th scope="row">id</th>
-          <td>Leanne Graham</td>
-          <td>Bret</td>
-          <td><a href="mailto:Sincere@april.biz">Sincere@april.biz</a></td>
-          <td><a href= "tel:1-770-736-8031 x56442">1-770-736-8031 x56442</a></td>
-          <td><a href="hildegard.org">hildegard.org</a></td>
-          <td>компания, деятельность, девиз</td>
-          <td>
-            <div class="card" style="width: 18rem;">
-              <img src="https://static-maps.yandex.ru/v1?ll=37.620070,55.753630&size=200,100&z=13&pt=37.620070,55.753630,pmwtm1~37.64,55.76363,pmwtm99&apikey=84310c9b-ee2c-4c30-8d2f-3ec63d115580" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Улица, дом, город, индекс</p>
-              </div>
-            </div>
-          </td>
-        </tr>
+        
       </tbody>
     </table>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
